# MemSysExplorer

./: .gitignore
apps/: .readthedocs.yaml  Makefile  README.md  built_profilers.json  main.py  memsysmetadata_perf_1.json  memsyspatternconfig_namd_r_base_1.json
apps/benchmarks/cpu2017/: README.md  run_spec2017_perf.sh
apps/config/: gainestown.cfg  memcount_config.txt  sunnycove.cfg
apps/docs/: getting_start.rst  index.rst  metadata.rst  packaging.rst  profilers.rst
apps/docs/profilers/: common.rst  dynamorio.rst  ncu.rst  nvbit.rst  perf.rst  sniper.rst
apps/example_data/: memsysmetadata_dynamorio.json  memsyspatternconfig_ls.json  sample.csv  sample.out  timeseries_106012.pb
apps/patches/: tracing_sniper.patch  tracing_sniper_kirin.patch
apps/profilers/: BaseMetadata.py  FrontendInterface.py  PatternConfig.py
apps/profilers/common/: CMakeLists.txt  PROTOBUF_SETUP.md  README.md
apps/profilers/common/include/: environment_capture.h  hll.h  memory_trace.h  protobuf_writer.h  ws_tsearch.h
apps/profilers/common/proto/: memory_trace.proto  memory_trace_pb2.py  timeseries_metrics.proto  timeseries_metrics_pb2.py
apps/profilers/common/src/: environment_capture.c  hll.c  memory_trace.cpp  protobuf_writer.c  ws_tsearch.c
apps/profilers/dynamorio/: Makefile  README.md  drio_Metadata.py  drio_PatternConfig.py  drio_profilers.py
apps/profilers/ncu/: ncu_Metadata.py
apps/profilers/nvbit/: nvbit_Metadata.py
apps/profilers/perf/: perf_Metadata.py  perf_PatternConfig.py  perf_profilers.py
apps/profilers/sniper/: Makefile  README.md  sniper_Metadata.py  sniper_PatternConfig.py  sniper_profilers.py  snipermem.py
apps/setup/: setup.csh  setup.sh
apps/tools/: README.md  environment_capture.py  makefile_parser.py  profiler_flag_parser.py  reuse_distance.py  timeparser_plot.py  timeseries_parser.py  trace_parser.py
tech/: README.md
tech/ArrayCharacterization/: InputParameter.cpp  MemCell.cpp  Result.cpp  SubArray.cpp  Technology.cpp
tech/ArrayCharacterization/sample_configs/sampleDATE2026 copy/: sampleedram3t_333eDRAM.cfg  samplesram_7nm.cfg
tech/ArrayCharacterization/sample_configs/sample_edram1ts/: sampleedram1t_22nm.cfg
tech/ArrayCharacterization/sample_configs/sample_edram3t_333/: sampleedram3t_333eDRAM.cfg
tech/ArrayCharacterization/sample_configs/sample_edram3ts/: sampleedram3t_28nm.cfg  sampleedram3t_7nm.cfg
tech/msxFI/: README.md  address_mapping.py  fault_injection.py  fi_config.py  fi_utils.py  run_msxfi.py
tech/msxFI/data_transforms/: data_transform_utils.py
tech/msxFI/example_nn/lenet/: run_eval.py
tech/msxFI/example_nn/resnet18/: run_eval.py
tech/pinn/: README.md  generate_nvsim_config.py  rram_cycle_evaluator.py
tech/pinn/checkpoints/: checkpoint.pth
